Add sqlite requirements

--- a/wiki/BuildRequirements.wiki
+++ b/wiki/BuildRequirements.wiki
@@ -1,15 +1,18 @@
-#summary List of lib required to build ardb and know working versions
+#summary List of third parts libs required to build ardb and know working versions
 #labels Phase-Deploy
 
-*Anarch Revolt Deck Builder* requires the fallowing third part libraries.
-
-= libxml2 http://xmlsoft.org/ =
+*Anarch Revolt Deck Builder* requires the following third part libraries.
+= Build Requirements =
+== libxml2 http://xmlsoft.org/ ==
   * libxml2-2.6.23
 
-= libxslt http://xmlsoft.org/XSLT/ =
+== libxslt http://xmlsoft.org/XSLT/ ==
   * libxslt-1.1.16
 
-= wxGTK http://www.wxwidgets.org/ =
+== wxGTK http://www.wxwidgets.org/ ==
   * wxGTK-2.8.6
 
 _Knowned to not compile with wxGTK-2.6.x_
+
+== sqlite http://www.sqlite.org/ == 
+ * sqlite-2.8.17 
