update all info files.

--- a/trunk/wxARDB/ChangeLog
+++ b/trunk/wxARDB/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-14 meshee.knight
+   * codebase is now hosted at googlecode.
+   * fixed issues can be reviewed here: 
+      http://code.google.com/p/ardb/issues/list?can=1&q=status%3AFixed
+
 2005-08-04 11:33  francois_g
 
 	* TODO: new ideas
