--- a/wxARDB/AUTHORS
+++ b/wxARDB/AUTHORS
@@ -1,4 +1,5 @@
 Graham Smith <graham.r.smith@gmail.com>
+Sylvain Gogel <meshee.knight@gmail.com>
 Francois Gombault <gombault.francois@wanadoo.fr> (original author)
 Sorrow (Christoph Boget) <sorrow@obscure.org> (database design)
 Ville Virta <ville.virta@fury.fi> (ELDB mimicking stylesheet)
