--- a/wxARDB/README
+++ b/wxARDB/README
@@ -4,19 +4,26 @@ Anarch Revolt Deck Builder (ARDB)
 Synopsis:
 ===========================
 
-ARDB is a helpful program to players of the VTES card game.
-It features a searchable database of all existing cards.
-It features an inventory manager for your collection.
-It features a deck builder tool.
-It is cross-platform.
-It is Free Software (free speach, free beer)
+Ardb is for everyone: Players, Collectors, Deckmonger, Card Dealers
 
+The Ardb desktop application is suited for many different uses.
+
+How can Ardb help you?
+    * Power Search: Browse all card list with a powerfull seach engine
+    * Deck Builder: Statistics, Happy Famillies helpers
+    * Export: Export decks to plain text, BBcode, Jol, etc
+    * Inventory: Manage your collection
+    * Open Source: Ardb is licensed under GPL v2
+    * Cross plateform: Windows 2000/XP/Vista, Mac OS X, Various Linux distributions
+    * Edge : Ardb is always up to date as it updates card list from official White wolf resource
 
 Requirements:
 ===========================
 
-wxWindows version 2.4 (http://www.wxwindows.org)
-
+libxml2 http://xmlsoft.org/
+libxslt http://xmlsoft.org/XSLT/
+wxWidgets 2.8.x http://www.wxwidgets.org/
+sqlite 2.8.x http://www.sqlite.org/
 
 How to build:
 ===========================
