--- a/wxARDB/ChangeLog
+++ b/wxARDB/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-23 afri
+   * fixed non-functional image browsing on linux
+
 2007-11-14 meshee.knight
    * codebase is now hosted at googlecode.
    * fixed issues can be reviewed here: 
