--- a/wiki/FrequentlyAskedQuestions.wiki
+++ b/wiki/FrequentlyAskedQuestions.wiki
@@ -1,18 +1,18 @@
 #summary Frequently Asked Questions
 #labels Phase-Support
 
-= Q?: Can i distribute Ardb on my own website =
+= Q?: Can I distribute Ardb on my own website =
 Yes, Ardb is release on the GPL v2 Licencing terms (http://www.gnu.org/copyleft/gpl.html), meaning you can use, modify, distribute Ardb freely as long as you keep it on same license terms.
 
 = Q?: When will release X.Y be Generally Available? =
 *When it's done! ^_^* 
 
-Seriously the Ardb Team are volonteers, so we do not ties us to timeframe.
+Seriously the Ardb Team are volunteers, so we cannot guarantee any release schedule.
 
-= Q?: How can i contribute =
-Send an email to [mailto:graham.r.smith@gmail.com Graham]. Have a look at http://code.google.com/p/ardb . Any good help will be much appreciate, not only peoples with IT backgrounds.
+= Q?: How can I contribute =
+Send an email to [mailto:graham.r.smith@gmail.com Graham]. Have a look at http://code.google.com/p/ardb . Any good help will be much appreciate, not only people with IT backgrounds.
 
-= Q?: How can report a Bug =
+= Q?: How can I report a Bug =
   # Go to [http://code.google.com/p/ardb/issues/list googlecode]
   # Check the currently opened bug and make sure your issue is not already opened
   # Create a new Issue
@@ -28,11 +28,14 @@ Any information that you can provide us with, will help. Such as:
 
 The more information a bug report has, the more likely it will be to get fixed. If a long period of time has gone by without an update to your bug, please bring it up for discussion on the [http://groups.google.com/group/ardb-devel Ardb Dev List]. 
 
-= Q? can i propose new features =
+= Q? Can I propose new features =
 Yes, visit us on the [http://groups.google.com/group/ardb-discuss Ardb Discussion List]. 
 
 = Q? Will Ardb work on Windows 95/98 one day =
-No. Ardb is based on fairly recent technologies, like Unicode. Windows 95/98 don't have proper Unicode support. They're too old. Or they're not good enough, I don't know. Either way, they're no longer supported by Microsoft anyway. You should probably upgrade to a better system... May I suggest MacOS or Linux? ^_^
+No. Ardb is based on fairly recent technologies, like Unicode. Windows 95/98 does not have proper Unicode support. They are no longer supported by Microsoft anyway. You should probably upgrade to a better system... May I suggest Linux? ^_^
 
 = Q? What is this Happy Families thing in Deck Builder =
 [http://wiki.vekn.org/index.php/Happy_Families Happy Families] is a formula designed by Legbiter to ensure a good card flow playing your deck. More information on this can be found on [http://legbiter.tripod.com/ Legbiter's web page(old)]
+
+= Q? What tools do I need to build Ardb =
+Ardb uses wxWidgets as its cross platform GUI toolkit.  It uses libxml and libxslt for processing deck lists. It is written in C++.  Any complier that can build these libraries can be used to build Ardb.  Ardb is built for Windows using Visual Studio 2008 and GCC on Linux.  It should build using GCC on Mac OSX but this is currently a work in progress!!
